--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "@prismicio/client": "^7.3.1",
     "@prismicio/react": "^2.7.3",
     "emailjs": "^4.0.3",
+    "framer-motion": "^11.1.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.1.0",
     "react-multi-carousel": "^2.8.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
